--- a/ゲームプログラミング実習2021_vs2019/GameProgramming/GameProgramming.vcxproj.filters
+++ b/ゲームプログラミング実習2021_vs2019/GameProgramming/GameProgramming.vcxproj.filters
@@ -123,6 +123,12 @@
     <ClCompile Include="CMyShader.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="CMap.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="CWall.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CSceneGame.h">
@@ -237,6 +243,12 @@
       <Filter>ソース ファイル</Filter>
     </ClInclude>
     <ClInclude Include="CVertex.h">
+      <Filter>ソース ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="CMap.h">
+      <Filter>ソース ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="CWall.h">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
   </ItemGroup>
