--- a/ゲームプログラミング実習2021_vs2019/GameProgramming/GameProgramming.vcxproj
+++ b/ゲームプログラミング実習2021_vs2019/GameProgramming/GameProgramming.vcxproj
@@ -86,6 +86,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CBillBoard.cpp" />
+    <ClCompile Include="CBlock.cpp" />
     <ClCompile Include="CBullet.cpp" />
     <ClCompile Include="CCamera.cpp" />
     <ClCompile Include="CCharacter.cpp" />
@@ -94,6 +95,13 @@
     <ClCompile Include="CColliderMesh.cpp" />
     <ClCompile Include="CColliderTriangle.cpp" />
     <ClCompile Include="CCollisionManager.cpp" />
+    <ClCompile Include="CCube_B.cpp" />
+    <ClCompile Include="CCube_G.cpp" />
+    <ClCompile Include="CCube_I.cpp" />
+    <ClCompile Include="CCube_O.cpp" />
+    <ClCompile Include="CCube_P.cpp" />
+    <ClCompile Include="CCube_R.cpp" />
+    <ClCompile Include="CCube_Y.cpp" />
     <ClCompile Include="CEffect.cpp" />
     <ClCompile Include="CEnemy.cpp" />
     <ClCompile Include="CEnemy2.cpp" />
@@ -132,6 +140,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CBillBoard.h" />
+    <ClInclude Include="CBlock.h" />
     <ClInclude Include="CBullet.h" />
     <ClInclude Include="CCamera.h" />
     <ClInclude Include="CCharacter.h" />
@@ -140,6 +149,13 @@
     <ClInclude Include="CColliderMesh.h" />
     <ClInclude Include="CColliderTriangle.h" />
     <ClInclude Include="CCollisionManager.h" />
+    <ClInclude Include="CCube_B.h" />
+    <ClInclude Include="CCube_G.h" />
+    <ClInclude Include="CCube_I.h" />
+    <ClInclude Include="CCube_O.h" />
+    <ClInclude Include="CCube_P.h" />
+    <ClInclude Include="CCube_R.h" />
+    <ClInclude Include="CCube_Y.h" />
     <ClInclude Include="CEffect.h" />
     <ClInclude Include="CEnemy.h" />
     <ClInclude Include="CEnemy2.h" />
