--- a/ゲームプログラミング実習2021_vs2019/GameProgramming/GameProgramming.vcxproj.filters
+++ b/ゲームプログラミング実習2021_vs2019/GameProgramming/GameProgramming.vcxproj.filters
@@ -198,6 +198,9 @@
     <ClCompile Include="CSceneTitle.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="CWall2.cpp">
+      <Filter>ソース ファイル\Lib</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CSceneGame.h">
@@ -388,6 +391,9 @@
     </ClInclude>
     <ClInclude Include="CSceneTitle.h">
       <Filter>ソース ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="CWall2.h">
+      <Filter>ソース ファイル\Lib</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
